# crewai

01crew/: pyproject.toml
01crew/src/project01crew/: main.py
01crew/src/project01crew/crews/teaching/: teaching.py
01crew/src/project01crew/crews/teaching/config/: agents.yaml  tasks.yaml
02litellm/: README.md  poem.txt  pyproject.toml
02litellm/src/project02litellm/: crewai_flow.html  main.py  main1.py  poem.txt
03localllm/: README.md  pyproject.toml
03localllm/src/project03localllm/: main.py
multiple_agents04/: README.md  pyproject.toml
multiple_agents04/src/multiple_agents04/: main.py  main1.py  main2.py
multiple_agents04/src/multiple_agents04/crews/dev_crew/: dev_crew.py  dev_crew1.py
multiple_agents04/src/multiple_agents04/crews/dev_crew/config/: agents.yaml  tasks.yaml
project01crew/: README.md
project01crew/src/project01crew/: __init__.py  main.py
