[project]
name = "project01crew"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rehan Ahmed", email = "rehan007313@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "crewai>=0.102.0",
]

[project.scripts]
project01crew = "project01crew:main"
panaflo = "project01crew.main:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
