[project]
name = "project02litellm"
version = "0.1.0"
description = "project02litellm using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
]

[project.scripts]
kickoff = "project02litellm.main:kickoff"
plot = "project02litellm.main:plot"
litellm = "project02litellm.main1:run_litellm"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
