[project]
name = "multiple_agents04"
version = "0.1.0"
description = "multiple-agents04 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
]

[project.scripts]
kickoff = "multiple_agents04.main:kickoff"
plot = "multiple_agents04.main:plot"
mul-agents = "multiple_agents04.main1:run"
agents = "multiple_agents04.main2:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
